--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Solid State by
+	Solid State
 	 | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (/license)
 -->
 <html>
 	<head>
-		<title>Solid State by </title>
+		<title>Solid State </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://"></a></p>
+							<p>Another free + fully responsive site template <a href="http://"></a></p>
 						</div>
 					</section>
 
